updating our details

--- a/index.html
+++ b/index.html
@@ -17,22 +17,23 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I'm a recently retired CIO from a public pension fund.  My goal with this boot camp is to prepare for a second career in web development.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Austin, TX</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Video Games, Reading, Comics</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Not sure, other than I'd like to be a full-stack developer working with a good team.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Austin, TX</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>While I've been in IT for a long time, I moved into management early in my career and never really got to software development, which I believe to be my reall calling.
+      </p>
     </section>
 
     <footer id="footer">
         <ul class="social">
-          <li><a href="http://www.github.com/usernamehere">Github</a></li>
+          <li><a href="http://www.github.com/swillrich5">Github</a></li>
         </ul>
     </footer>
 </body>
